@@ -84,15 +84,15 @@ SYNOPSIS
    vhost_discovery $1
     discovers RabbitMQ vhosts
 
-    $1: *expiry in seconds, by default 600*
+    $1: *expiry in seconds, by default 0*
 
    queue_discovery $1
     discovers RabbitMQ queues
 
-    $1: *expiry in seconds, by default 600*
+    $1: *expiry in seconds, by default 0*
 
    queue_status $1 $2 $3
-    gets RabbitMQ queue status
+    gets RabbitMQ queue status using queue discovery cache
 
     $1: *vhost name*
 
